# ML-API

./: .gitignore  README.md  pyproject.toml
doc/: usage.md
src/common/: model_routes.py  response_types.py  uvicorn_server.py
src/router/: router.py
