[project]
name = "ml-api"
version = "0.1.0"
description = "A communication framework between client applications and machine learning models"
license = "MIT"
authors = [
    {name = "Dominik Zawlocki"},
    {name = "Piotr Matusiewicz"}
]
maintainers = [
    {name = "Dominik Zawlocki"},
    {name = "Piotr Matusiewicz"}
]
keywords = [
    "rest-api",
    "python",
    "model-serving",
    "fastapi",
    "machine-learning",
    "api",
    "ml-serving",
    "model-deployment",
    "ml-ops"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Framework :: Pydantic :: 2",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.4",
    "uvicorn>=0.38.0",
]

[project.urls]
Homepage = "https://github.com/AI-MED-AGH/ML-API"
Documentation = "https://github.com/AI-MED-AGH/ML-API/tree/main/doc"
Repository = "https://github.com/AI-MED-AGH/ML-API"
Issues = "https://github.com/AI-MED-AGH/ML-API/issues"
Changelog = "https://github.com/AI-MED-AGH/ML-API/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]